name:                  Interpreter
version:               0.1.0.0
synopsis:              TODO Initial project template from stack
description:           readme.lhs
homepage:              https://github.com/kleptodorf/Interpreter
license:               BSD3
license-file:          LICENSE
author:                Aaron Jenner
maintainer:            ajenner@tcd.ie
copyright:             2016 Aaron Jenner
category:
build-type:            Simple
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5

executable readme
  default-language:    Haskell2010
  ghc-options:         -O2
                       -funbox-strict-fields
                       -fforce-recomp
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  hs-source-dirs:      ./
  main-is:             readme.lhs
  build-depends:       base
                     , protolude
                     , Interpreter

source-repository head
  type:     git
  location: https://github.com/kleptodorf/Interpreter
